--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on: [push]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  # This workflow contains a single job called "bui
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -16,9 +16,16 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: docker-compose up -d
-
+    - name: Push to vps
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{secrets.HOST}} 
+        port: ${{secrets.PORT}} 
+        password: ${{secrets.PASSWORD}}
+        script: cd ${{ secrets.PROJECT_PATH }} && git pull
+    # Runs a set of commands using the runners shell
+    - name: Run project
+      run: sudo docker-compose up -d
