--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -25,7 +25,7 @@ jobs:
         host: ${{secrets.HOST}} 
         port: ${{secrets.PORT}} 
         password: ${{secrets.PASSWORD}}
-        script: cd ${{ secrets.PROJECT_PATH }} && git pull
+    #    script: cd ${{ secrets.PROJECT_PATH }} && git pull
     # Runs a set of commands using the runners shell
     - name: Run project
       run: sudo docker-compose up -d
