--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -21,7 +21,7 @@ jobs:
     # Runs a single command using the runners shell
     - name: Push to vps
       uses: appleboy/ssh-action@master
-      with:
+      env:
         host: ${{secrets.HOST}} 
         port: ${{secrets.PORT}} 
         password: ${{secrets.PASSWORD}}
