--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -22,9 +22,14 @@ jobs:
     - name: Push to vps
       uses: appleboy/ssh-action@master
       env:
-        host: ${{secrets.HOST}} 
-        port: ${{secrets.PORT}} 
-        password: ${{secrets.PASSWORD}}
+        SSH_PRIVATE_KEY: ${{ secrets.SSHKEY }}
+        REMOTE_HOST: ${{secrets.HOST}}
+        REMOTE_USER: ${{ secrets.USERNAME }}
+        REMOTE_PORT: ${{secrets.PORT}}
+        TARGET: ${{ secrets.PROJECT_PATH }}
+#         host: ${{secrets.HOST}} 
+#         port: ${{secrets.PORT}} 
+#         password: ${{secrets.PASSWORD}}
     #    script: cd ${{ secrets.PROJECT_PATH }} && git pull
     # Runs a set of commands using the runners shell
     - name: Run project
