--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -17,7 +17,14 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
+    - name: executing remote ssh commands using password
+      uses: ./
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        port: ${{ secrets.PORT }}
+        script: whoami
     # Runs a single command using the runners shell
     - name: Push to vps
       uses: appleboy/ssh-action@master
