--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -43,4 +43,4 @@ jobs:
     #    script: cd ${{ secrets.PROJECT_PATH }} && git pull
     # Runs a set of commands using the runners shell
     - name: Run project
-      run: sudo docker-compose up -d
+      run: sudo docker-compose up --build -d
