--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-#     - name: executing remote ssh commands using password
-#       uses: ./
+    - name: executing remote ssh commands using password
+      uses: ./
 #       with:
 #         host: ${{ secrets.HOST }}
 #         username: ${{ secrets.USERNAME }}
