--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -11,19 +11,19 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: executing remote ssh commands using password
-      uses: ./
-#       with:
-#         host: ${{ secrets.HOST }}
-#         username: ${{ secrets.USERNAME }}
-#         password: ${{ secrets.PASSWORD }}
-#         port: ${{ secrets.PORT }}
-#         target: ${{secrets.PROJECT_PATH}} 
-#         script: |
-#           ls \
-#           cd git_action/ \
-#           git pull origin master \
-#           cd testdocker/ \
-#           sudo docker-compose up --build
+#       uses: ./
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        port: ${{ secrets.PORT }}
+        target: ${{secrets.PROJECT_PATH}} 
+        script: |
+          ls \
+          cd git_action/ \
+          git pull origin master \
+          cd testdocker/ \
+          sudo docker-compose up --build
     # Runs a single command using the runners shell
 #     - name: Push to vps
 #       uses: appleboy/ssh-action@master
