--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: executing remote ssh commands using password
-#       uses: ./
+      uses: apple boy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
