--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -19,10 +19,10 @@ jobs:
         port: ${{ secrets.PORT }}
         target: ${{secrets.PROJECT_PATH}} 
         script: |
-          ls \
-          cd git_action/ \
-          git pull origin master \
-          cd testdocker/ \
+          ls
+          cd git_action/
+          git pull origin master
+          cd testdocker/
           sudo docker-compose up --build
     # Runs a single command using the runners shell
 #     - name: Push to vps
