--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -20,9 +20,8 @@ jobs:
         target: ${{secrets.PROJECT_PATH}} 
         script: |
           ls
-          cd git_action/
+          cd git_action/testdocker/
           git pull origin master
-          cd testdocker/
           sudo docker-compose up --build
     # Runs a single command using the runners shell
 #     - name: Push to vps
