--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -21,7 +21,8 @@ jobs:
         script: |
           cd git_action/testdocker/
           git pull origin master
-          sudo docker-compose up --build -d
+          sudo docker-compose up -d --build
+          sudo docker-compose ps
     # Runs a single command using the runners shell
 #     - name: Push to vps
 #       uses: appleboy/ssh-action@master
