--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -10,19 +10,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: executing remote ssh commands using password
-      uses: appleboy/ssh-action@master
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v1
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        port: ${{ secrets.PORT }}
-        target: ${{secrets.PROJECT_PATH}} 
-        script: |
-          cd git_action/testdocker/
-          git pull origin master
-          sudo docker-compose up -d --build
-          sudo docker-compose ps
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: sevolloves/test1
+        tags: test1  
+      
+      
+#     - name: executing remote ssh commands using password
+#       uses: appleboy/ssh-action@master
+#       with:
+#         host: ${{ secrets.HOST }}
+#         username: ${{ secrets.USERNAME }}
+#         password: ${{ secrets.PASSWORD }}
+#         port: ${{ secrets.PORT }}
+#         target: ${{secrets.PROJECT_PATH}} 
+#         script: |
+#           cd git_action/testdocker/
+#           git pull origin master
+#           sudo docker-compose up -d --build
+#           sudo docker-compose ps
     # Runs a single command using the runners shell
 #     - name: Push to vps
 #       uses: appleboy/ssh-action@master
